--- a/src/Components/Timer.module.css
+++ b/src/Components/Timer.module.css
@@ -6,23 +6,54 @@
 .main_timer {
   margin: auto;
   width: 400px;
+  margin-top: 15px;
 }
 .time_div {
-  border: 1px solid red;
-  height: 100px;
+  border: 3px solid #f37878;
+  border-radius: 15px;
+  height: 70px;
   width: 100%;
+  background-color: #f9f9c5;
+  color: #f37878;
+  margin-bottom: 15px;
 }
 .hospital {
   border: 1px solid red;
-  height: 100px;
   width: 100%;
+  border: 3px solid #f37878;
+  border-radius: 15px;
+  background-color: #f9f9c5;
+  color: #f37878;
 }
 .city {
   background-color: #f9f9c5;
   color: #f37878;
   padding: 0px 50px;
   height: 100px;
-  border-radius: 35px;
+  border-radius: 15px;
   padding-top: 10px;
   border: 3px solid #f37878;
+  margin-top: 15px;
+}
+.flex {
+  display: flex;
+  justify-content: space-evenly;
+  margin-top: -15px;
+}
+.precautions {
+  display: flex;
+  justify-content: space-evenly;
+  border: 2px solid #f37878;
+  border-radius: 15px;
+  background-color: #f9f9c5;
+  color: #f37878;
+  margin-bottom: 50px;
+}
+.precautions > div {
+  display: flex;
+  gap: 10px;
+}
+.icon {
+  margin-top: 27px;
+  font-size: 30px;
 }
